--- a/back-end/package.json
+++ b/back-end/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^5.0.1",
+    "@nestjs/typeorm": "^11.0.0",
     "class-validator": "^0.14.1",
     "mysql2": "^3.12.0",
     "reflect-metadata": "^0.2.2",
